--- a/4Feb.html
+++ b/4Feb.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4 Feburary</title>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <h1>Thanks for shopping</h1>
     <script>
         // var obtained_marks  = parseInt(prompt("enter your obtain marks out of 100 "));
         // var obtain_marks = parseInt(prompt("enter your obtain marks out of 85"));
@@ -18,10 +24,11 @@
         var item_type = prompt("Select the type of Shirts you want =\n a)Party Shirt \n b)Casual Shirt \n c)Track Shirt");
         var item_quantity = parseInt(prompt("Select Number of Shirts you want"));
         var item_price = parseInt(prompt("Select Minimum Price in between RS 100 and RS 700"));
-        document.write ("Your item_type=====>"+ item_type+"<br/>");
+        document.write ("Your Item Type===>"+ item_type+"<br/>");
         document.write ("Your item_quantity=====>"+item_quantity+"<br/>");
-        var result = ("item_quantity*item_price");
+        var result = (item_quantity*item_price);
         document.write ("Your total_item_price====>"+result+"<br/>");
+
     </script>
 </body>
 </html>
