--- a/20Apr.html
+++ b/20Apr.html
@@ -31,7 +31,7 @@
     <label>
         Password :<input type="password" id="pass" value="">
     </label>
-    <button onclick="form()">Submit</button>
+    <button onclick="myform()">Submit</button>
     <script src="20Apr.js"></script>
 </body>
 </html>
